@@ -24,6 +24,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7249: Methods of io.BytesIO now allow `long` as well as `int`
+  arguments.
+
 - Issue #6665: Fix fnmatch to properly match filenames with newlines in them.
 
 - Issue #1008086: Fixed socket.inet_aton() to always return 4 bytes even on
